2008-10-19  Helmut Eller  <heller@common-lisp.net>

	* swank-clisp.lisp (filename-to-pathname, parse-cygwin-filename):
	Accept Windows and Unix filenames when :CYGWIN is in *features*.

2008-10-17  Helmut Eller  <heller@common-lisp.net>

	* swank-sbcl.lisp (swank-compile-file): Fix typo.

2008-10-17  Helmut Eller  <heller@common-lisp.net>

	* swank-backend.lisp (compute-sane-restarts): Deleted. Use plain
	compute restarts instead.

2008-10-17  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (call-with-retry-restart): Implement this a little
	less confusing.

2008-10-17  Helmut Eller  <heller@common-lisp.net>

	* swank-backend.lisp (frame-restartable-p): New function.
	(swank-frame): Deleted. Update implemenetations accordingly.
	(print-frame): Renamed back from print-swank-frame.

	* swank.lisp (backtrace): Don't clutter the backtrace with
	'(:restartable :unknown).  For practical purposes :unknown is the
	same as nil.

	* slime.el (sldb-compute-frame-face): Only accept nil or t for
	the :restartable prop.

2008-10-16  Helmut Eller  <heller@common-lisp.net>

	* swank-backend.lisp (swank-compile-file): Return the same
	values as COMPILE-FILE.  Update backends accordingly.

	* swank-lispworks.lisp (with-swank-compilation-unit): Return the
	values of BODY.
	(compile-from-temp-file)
	* swank-allegro.lisp (compile-from-temp-file)
	* swank-clisp.lisp (swank-compile-string)
	* swank-abcl.lisp (swank-compile-string): Return T on success.
	* swank.lisp (collect-notes): Check return type of
	FUNCTION.

2008-10-16  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp (frame-catch-tags): Disabled as it prevents
	FRAME-LOCALS from working in lx8632.

2008-10-10  Nikodemus Siivola <nikodemus@random-state.net>

	* slime.el (slime-inspector-toggle-verbose): New function.
	(slime-inspector-mode-map): Bind v to slime-inspector-toggle-verbose.
	(slime-cheat-sheet-table): Add slime-inspector-toggle-verbose.
	* swank.lisp (*inspector-verbose*): New variable.